--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/lamplightdev/aeon/issues"
   },
-  "homepage": "https://github.com/lamplightdev/aeon#readme"
+  "homepage": "https://github.com/lamplightdev/aeon#readme",
+  "devDependencies": {
+    "rollup": "^1.32.0",
+    "rollup-plugin-terser": "^5.2.0"
+  }
 }
