--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A date time picker web component",
   "module": "src/aeon.js",
+  "unpkg": "dist/aeon.js",
   "scripts": {
     "build": "npx rollup -c",
     "storybook": "start-storybook"
