--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@lamplightdev/aeon",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A date time picker web component",
   "module": "src/aeon.js",
   "unpkg": "dist/aeon.js",
   "scripts": {
     "build": "npx rollup -c",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "repository": {
     "type": "git",
