change storybook static location

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx rollup -c",
     "build:watch": "npx rollup -c -w",
     "storybook": "start-storybook -c storybook/.storybook",
-    "build:storybook": "build-storybook -c storybook/.storybook -o storybook/.out"
+    "build:storybook": "build-storybook -c storybook/.storybook -o storybook/static"
   },
   "repository": {
     "type": "git",
